refactor(RecordService): 기록 불러오기, 수정 기능 리팩토링
- 기록 리스트 반환 시, 코드 간결하게 수정하였습니다
- 기록 수정 시, 필요 없는 save 호출 제거를 해주었습니다.
  이유) JPA 엔티티 상태 변경을 할 경우, 트랜잭션 종료시 dirty checking을 통해 자동으로 변경 사항이 저장되기 때문